Initial modal pops and logs tasks in current note

--- a/keymaps/better-tasks.json
+++ b/keymaps/better-tasks.json
@@ -1,5 +1,6 @@
 {
   "body": {
-    "ctrl-alt-o": "better-tasks:toggle"
+    "ctrl-alt-o": "better-tasks:toggle",
+    "ctrl-alt-t": "better-tasks:insert"
   }
 }
