--- a/menus/better-tasks.json
+++ b/menus/better-tasks.json
@@ -17,6 +17,10 @@
             {
               "label": "Toggle",
               "command": "better-tasks:toggle"
+            },
+            {
+              "label": "New Task",
+              "command": "better-tasks:insert"
             }
           ]
         }
