added edit function

--- a/menus/better-tasks.json
+++ b/menus/better-tasks.json
@@ -21,6 +21,10 @@
             {
               "label": "New Task",
               "command": "better-tasks:insert"
+            },
+            {
+              "label": "Edit Task",
+              "command": "better-tasks:edit"
             }
           ]
         }
