included tasks for roadmap

--- a/keymaps/better-tasks.json
+++ b/keymaps/better-tasks.json
@@ -1,6 +1,7 @@
 {
   "body": {
     "ctrl-alt-o": "better-tasks:toggle",
-    "ctrl-alt-t": "better-tasks:insert"
+    "ctrl-alt-t": "better-tasks:insert",
+    "ctrl-alt-e": "better-tasks:edit"
   }
 }
